# geoip-geosite-list

./: README.md  domains.json  domains.txt  pyproject.toml
.github/workflows/: python-package.yml
geoip_geosite_list/: cli.py  generate.py
src/: main.py
